# nanostream

./: .gitignore  CMakeLists.txt  README.md  eigen_decomposition.py  nanostream.c  nanostream.h  nanostream_eigen.c
eval/: main.cpp
